# NyaZy

./: .gitignore  CMakeLists.txt  README.md  bin  sample.nz
include/: ast.h  error.h  expr.h  lexer.h  mlirGen.h  parser.h  scope.h  types.h
include/ir/: CMakeLists.txt  NyaZyBase.td  NyaZyDialect.h  NyaZyDialect.td  NyaZyOps.h  NyaZyOps.td  NyaZyOpsEnums.h  Pass.h  common.h
mlir/: CMakeLists.txt  NyaZyDialect.cpp  NyaZyDialect.h  NyaZyOps.h  NyaZyOps.td
scripts/: build.sh  configure.sh  thirdparty.sh
src/: CMakeLists.txt  ast.cpp  ast.h  error.cpp  lexer.cpp  lexer.h  main.cpp  mlirGen.cpp  mlirGen.h  parser.cpp  scope.cpp  types.cpp
src/ir/: CMakeLists.txt  NyaZyDialect.cpp  NyaZyOps.cpp  NyaZyOpsEnums.cpp  common.cpp  lowerNyaZyPrintToPrintf.cpp  lowerNyaZyToStd.cpp  lowerStdToLLVM.cpp  lowerToLLVM.cpp
test/: CMakeLists.txt  simpleTest.cpp
